--- a/trafficdash.html
+++ b/trafficdash.html
@@ -8,13 +8,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      padding-top: 81px;
+    }
+  </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class=" ps-5 justify-content-center align-items-center container-fluid">
-      <img src="img/logo.jpg" class="rounded-circle" alt="logo" style="height:65px;">
-      <a class="navbar-brand" href="#">TMS</a>
+      <a href="trafficdash.html">
+        <img src="img/logo.jpg" class="rounded-circle" alt="logo" style="height:65px;">
+        <a class="navbar-brand" href="trafficdash.html">TMS</a>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,17 +33,15 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="efine.html">e-Cheat</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Notice<span class="badge bg-danger"></span></a>
+            <a class="nav-link" href="notice.html">Notice</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="news.html">News</a>
-          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               More
@@ -46,12 +52,7 @@
               <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
               <li><a class="dropdown-item" href="#">Complain</a></li>
               <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li>
-                <a href="https://betelgeuse.dribbcast.com/proxy/trafficradio?mp=/stream">Metro Traffic FM 95.5</a>
-              </li>
+
             </ul>
           </li>
         </ul>
@@ -60,9 +61,7 @@
     <div class="dropdown text-end px-5 mx-4">
       <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
         aria-expanded="false">
-        <img
-          src="img/sachin.jpg"
-          alt="profile" width="38" height="38" class="rounded-circle">
+        <img src="img/sachin.jpg" alt="profile" width="38" height="38" class="rounded-circle">
       </a>
       <ul class="dropdown-menu text-small">
         <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -153,7 +152,7 @@
       </article>
       <article class="card col-lg-3">
         <div class="gap-2 card-body vstack">
-          <a href="#">
+          <a href="notice.html">
             <img class="card-img-top" src="img/notice.jpg" alt="Card image cap">
             <i class=""></i>
             <h3 class="card-title fw-bold">Notice</h3>
@@ -221,8 +220,6 @@
   </div>
 
 
-
-
   <div class="bg-light">
     <section class="container-lg py-3 py-lg-5">
       <h2 class="text-center fw-bold mb-3">Our Team</h2>
@@ -248,7 +245,7 @@
             <dt class="fw-normal text-muted text-center fs-3 order-3">Traffic Police</dt>
             <dd class="text-center fw-bold fs-1 order-2 mb-0">250+
             </dd>
-            <i class="bi bi-award fs-1 d-block text-center text-warning order-1"></i>
+            <i class="bi bi-people fs-1 d-block text-center text-warning order-1"></i>
         </a>
   </div>
   <a href="/items.html">
@@ -279,8 +276,6 @@
   </div>
   </footer>
   </div>
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
