updated in new versions

--- a/notice.html
+++ b/notice.html
@@ -12,7 +12,7 @@
 </head>
 <style>
     body{
-        background-color: rgb(230, 228, 228);
+        background-color: rgb(255, 255, 255);
         padding-top: 82px;
     }
 </style>
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="efine.html">e-Cheat</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="notice.html">Notice</a>
+                        <a class="nav-link" href="notice1.html">Notice</a>
                     </li>
                   
                     <li class="nav-item dropdown">
@@ -49,18 +49,15 @@
                             More
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Traffic Rules</a></li>
-                            <li><a class="dropdown-item" href="#">Traffic Helplines</a></li>
+                            <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
+                            <li><a class="dropdown-item" href="#">Traffic Helplines</a></li>
+                            <li><a class="dropdown-item" href="driving.html">Driving Licence Exam </a></li>
                             <li><a class="dropdown-item" href="#">Complain</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            <li>
-                                <a href="https://betelgeuse.dribbcast.com/proxy/trafficradio?mp=/stream">Metro Traffic
-                                    FM 95.5</a>
-                            </li>
+                            <li><a class="dropdown-item" href="contact.html">contact us</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -88,8 +85,8 @@
       </div>
 
 
-    <div class="container pt-4">
-        <div class="jumbotron" style="background-color: rgb(250, 251, 252);">
+      <div class="container main-body shadow my-3 py-4">
+        <div class="col-md-12 col-sm-12 border-right">
             <h3><b>अनलाईन सचेतना कक्षा सम्बन्धी सुचना ।</b></h3>
             <h6>03/23/2023</h6>
             <hr>
@@ -99,8 +96,8 @@
 
     <hr class="dropdown-divider">
 
-    <div class="container pt-4">
-        <div class="jumbotron" style="background-color: rgb(250, 251, 252);">
+    <div class="container main-body shadow my-3 py-4">
+        <div class="col-md-12 col-sm-12 border-right">
             <h3><b>Precaution for Motorists</b></h3>
             <h6>03/23/2023</h6>
             <hr>
@@ -126,8 +123,8 @@
 
     <hr class="dropdown-divider">
 
-    <div class="container pt-4">
-        <div class="jumbotron" style="background-color: rgb(250, 251, 252);">
+    <div class="container main-body shadow my-3 py-4">
+        <div class="col-md-12 col-sm-12 border-right">
             <h3><b>Important Notice</b></h3>
             <h6>03/23/2023</h6>
             <hr>
@@ -140,8 +137,8 @@
 
     <hr class="dropdown-divider">
 
-    <div class="container pt-4">
-        <div class="jumbotron" style="background-color: rgb(250, 251, 252);">
+    <div class="container main-body shadow my-3 py-4">
+        <div class="col-md-12 col-sm-12 border-right">
             <h3><b>ट्राफिक प्रहरीले गर्दै आएका अन्य काम कारवाही</b></h3>
             <h6>03/23/2023</h6>
             <hr>
