--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="efine.html">e-Cheat</a>
+                        <a class="nav-link" href="efine.html">E-Chit</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="notice1.html">Notice</a>
