--- a/notice5.html
+++ b/notice5.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="efine.html">e-Cheat</a>
+                        <a class="nav-link" href="efine.html">E-Chit</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="notice1.html">Notice</a>
@@ -81,7 +81,7 @@
     </nav>
 
     <div class="alert alert-primary justify-content-center text-center" role="alert">
-       <b>NOTICE</b> 
+       NOTICE 
       </div>
 
 
