--- a/trafficrule.html
+++ b/trafficrule.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="efine.html">e-Cheat</a>
+                        <a class="nav-link" href="efine.html">E-Chit</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="notice1.html">Notice</a>
@@ -83,7 +83,7 @@
         <b>Traffic Rules Of Nepal</b>
     </div>
 
-    <iframe src="img/trafficrule.pdf" width="100%" height="800px">
+    <iframe class="mb-2" src="img/trafficrule.pdf" width="100%" height="800px">
     </iframe>
 
 
