--- a/trafficsign.html
+++ b/trafficsign.html
@@ -55,13 +55,8 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
-                            <li><a class="dropdown-item" href="#">Traffic Helplines</a></li>
-                            <li><a class="dropdown-item" href="driving.html">Driving Licence Exam </a></li>
-                            <li><a class="dropdown-item" href="#">Complain</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="contact.html">Contact us</a></li>
+                            <li><a class="dropdown-item" href="helpline.html">Traffic Helplines</a></li>
+                          
                         </ul>
                     </li>
                 </ul>
@@ -78,7 +73,7 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <li><a class="dropdown-item" href="login1.html">Sign out</a></li>
             </ul>
         </div>
     </nav>
