--- a/bloodbank.html
+++ b/bloodbank.html
@@ -74,7 +74,7 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <li><a class="dropdown-item" href="login1.html">Sign out</a></li>
             </ul>
         </div>
 
