--- a/traffic/signup.html
+++ b/traffic/signup.html
@@ -54,7 +54,7 @@
     </div>
 
     <div id="success-message" class="alert alert-success mt-4" role="alert" style="display: none;">
-      Registration Successful!
+      Registration Successful.....!
     </div>
   </body>
 </html>
