--- a/trafficsign.html
+++ b/trafficsign.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" aria-current="page" href="trafficdash.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="efine.html">E-Chit</a>
