District name and Numbers are updated

--- a/helpline.html
+++ b/helpline.html
@@ -81,12 +81,12 @@
 
 
     <div class="container main-body shadow py-3 mb-5">
-        <div class="col-sm-12 ">
+        <div class="col-sm-12 mx-4 ">
             <h4><b>Helplines Number</b></h4>
             <hr>
-            <p><a><b>Traffic Police control:</b> <a class="text-primary">103</a></a> </p>
-            <p> <a><b>Nepal Police control:</b> <a class="text-primary">100</a></a></p>
-            <p><a><b>Kathmandu Police:</b> <a class="text-primary">01-461707, 9851283032</a></a> </p>
+            <p><a><b>Kathmandu:</b> <a class="text-primary">01-4219841</a></a> </p>
+            <p> <a><b>Bhaktapur:</b> <a class="text-primary">+977 984334834</a></a></p>
+            <p><a><b>Lalitpur:</b> <a class="text-primary">+977 985-1285601</a></a> </p>
         </div>
     </div>
 
