--- a/trafficdash.html
+++ b/trafficdash.html
@@ -179,14 +179,14 @@
     </div>
   </section>
 
-  <div class="video  ml-5">
-    <iframe class=" mx-4" width="320" height="300" src="https://www.youtube.com/embed/re5eUZPadI4">
+  <div class="video  ml-0">
+    <iframe class="mb-3 " width="380" height="300" src="https://www.youtube.com/embed/re5eUZPadI4" style="border-color: rgb(33, 202, 67);">
     </iframe>
 
-    <iframe class="mx-4" width="320" height="300" src="https://www.youtube.com/embed/dZ8gRSKqIcY">
+    <iframe class="mb-3 mx-5" width="380" height="300" src="https://www.youtube.com/embed/dZ8gRSKqIcY">
     </iframe>
 
-    <iframe class="mx-4" width="320" height="300" src="https://www.youtube.com/embed/TjNysHt8bZg">
+    <iframe class="mb-3" width="380" height="300" src="https://www.youtube.com/embed/TjNysHt8bZg">
     </iframe>
   </div>
 
