--- a/traffic/helpline.html
+++ b/traffic/helpline.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>driving</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-<style>
-    body{
-        background-color: rgb(255, 255, 255);
-        padding-top: 82px;
-    }
-</style>
-
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: rgb(255, 255, 255);
+            padding-top: 82px;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,7 +36,7 @@
                         <a class="nav-link" aria-current="page" href="trafficdash.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="efine.html">E-Chit</a>
@@ -54,11 +53,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
-                            <li><a class="dropdown-item" href="#">Traffic Helplines</a></li>
-                            <li><a class="dropdown-item" href="driving.html">Driving Licence Exam </a></li>
-                            <li><a class="dropdown-item" href="#">Complain</a></li>
-
-                    </li>
+                            <li><a class="dropdown-item" href="helpline.html">Traffic Helplines</a></li>
                 </ul>
             </div>
         </div>
@@ -73,18 +68,28 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <li><a class="dropdown-item" href="login.html">Sign out</a></li>
             </ul>
         </div>
 
     </nav>
-
     <div class="alert alert-primary justify-content-center text-center" role="alert">
-        <b>Driving Licence Exam Model Questions</b>
+        <b>Helplines</b>
     </div>
 
-    <iframe src="img/exam.pdf" width="100%" height="800px">
-    </iframe>
+
+
+
+    <div class="container main-body shadow py-3 mb-5">
+        <div class="col-sm-12 mx-4 ">
+            <h4><b>Helplines Number</b></h4>
+            <hr>
+            <p><a><b>Kathmandu:</b> <a class="text-primary">01-4219841</a></a> </p>
+            <p> <a><b>Bhaktapur:</b> <a class="text-primary">+977 984334834</a></a></p>
+            <p><a><b>Lalitpur:</b> <a class="text-primary">+977 985-1285601</a></a> </p>
+        </div>
+    </div>
+
 
 
 
@@ -104,6 +109,8 @@
                         channel</span></a></li>
         </ul>
     </div>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
