--- a/traffic/notice5.html
+++ b/traffic/notice5.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" aria-current="page" href="trafficdash.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="efine.html">E-Chit</a>
@@ -51,13 +51,8 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
-                            <li><a class="dropdown-item" href="#">Traffic Helplines</a></li>
-                            <li><a class="dropdown-item" href="driving.html">Driving Licence Exam </a></li>
-                            <li><a class="dropdown-item" href="#">Complain</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="contact.html">contact us</a></li>
+                            <li><a class="dropdown-item" href="helpline.html">Traffic Helplines</a></li>
+                            
                         </ul>
                     </li>
                 </ul>
@@ -74,7 +69,7 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <li><a class="dropdown-item" href="login.html">Sign out</a></li>
             </ul>
         </div>
 
@@ -83,10 +78,7 @@
     <div class="alert alert-primary justify-content-center text-center" role="alert">
        NOTICE 
       </div>
-
-
-   
-
+ 
     <div class="container main-body shadow my-3 py-4">
         <div class="col-md-12 col-sm-12 border-right">
             <h3><b>Important Notice</b></h3>
