--- a/notice1.html
+++ b/notice1.html
@@ -81,16 +81,16 @@
 
       <div class="container main-body shadow my-3 py-4">
         <div class="col-ms-6 ">
-            <h3><b>सूचनाहरु</b></h3>
+            <h3><b>Notice</b></h3>
             <hr class="dropdown-divider"><br>
             <a href="notice2.html">
-            <h6>अनलाईन सचेतना कक्षा सम्बन्धी सुचना</h6></a>
+            <h6>Metro traffic to manage street lights in the capital</h6></a>
             <a href="notice4.html">
-            <h6>ट्राफिक प्रहरीले गर्दै आएका अन्य काम कारवाही</h6></a>
+            <h6>Traffic Police Division collects over Rs 310 million revenue in fine</h6></a>
             <a href="notice3.html">
                 <h6>Precaution for Motorists</h6></a>
                 <a href="notice5.html">
-                    <h6>  Important Notice</h6></a>
+                    <h6>  Important Notice</h6></a> 
             
               
         </div>
