--- a/notice3.html
+++ b/notice3.html
@@ -92,7 +92,7 @@
                 Keep a small hammer in the vehicle for breaking the wind screen of your vehicles, if the central locking system fails. Also keep a small torch handy in your car's cabin.
                 Keep a fire extinguisher in your car and a First Aid Box.
                 Keep sufficient quantity of fuel in the fuel tank.
-                Get your air conditioner serviced before monsoon.
+                Get your air conditioner serviced before monsoon.<br><br>
                 Visit Traffic Police Website www.traffic.nepalpolice.gov.np or mail me vtpo@nepalpolice.gov.np
                 In case of heavy water logging, leave the car at assigned parking places. Avoid Frantic/repeated calls as such calls jam the cellular networks.
                 Whenever high tide is coinciding with heavy rains, the rain water clogs the drainage system. This results in flooding of low lying areas.
