--- a/trafficsign.html
+++ b/trafficsign.html
@@ -813,9 +813,235 @@
                             </div>
                         </div>
                     </div>
-                </div>    </div>
+                </div>
+               
+
+<br><br>
+                    <hr>
+        <h4 class="font-weight-bold text-center py-0 my-0">Information Signs (जानकारीमुलक चिन्ह )</h4>
+        <div class="row">
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/71.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">पार्किंग ईस्थल</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/72.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">एक तर्फी बाटो</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/73.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">वर्क शप</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/74.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">प्राथिमिक उपचार सिबिर</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/75.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">उछिने ठाउँ</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/76.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">टेलिफोन</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="img/77.png" width="50%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">बाटोको अन्त</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/78.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">पैदल यात्री को बाटो</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/79.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">पेट्रोल पम्प</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/80.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">बस बस्ने ठाउँ</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/81.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">अस्पताल</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/82.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">जलपान ठाउँ</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/83.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">पैदल यात्री र साइकल को बाटो</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/84.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">रेस्टुरा</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/85.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">पैदल यात्रीको बाटो</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/86.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">साइकल को बाटो</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/87.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">बस बिसौनी</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/88.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">बन भोज क्षेत्र</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/89.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">जेब्रा क्रस</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/90.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">अत्यन्त जरुरि भए मात्र राख्न</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/91.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">सडक छेउ  का रेखाहरु</b>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6 pt-4">
+                <div class="card text-dark" id="shadow">
+                    <div class="card-body text-center py-0 my-0">
+                        <img src="/assets/img/trafficsign/92.png" width="100%" class="responsive" alt="Nepal Traffic Sign">
+                    </div> 
+                    <div class="card-footer text-center py-0 my-0">
+                        <b class="text-center">सडक बीच का रेखाहरु</b>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>    </div>
 
                 <div class="d-flex flex-column flex-sm-row justify-content-center pt-2"
                     style="background-color: aliceblue;">
