--- a/notice3.html
+++ b/notice3.html
@@ -76,7 +76,7 @@
     </nav>
 
     <div class="alert alert-primary justify-content-center text-center" role="alert">
-       NOTICE
+      <b>NOTICE</b> 
       </div>
 
 
