--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <style>
-        body{
+        body {
             background-color: rgb(255, 255, 255);
             padding-top: 82px;
         }
@@ -54,8 +54,8 @@
                             <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
                             <li><a class="dropdown-item" href="helpline.html">Traffic Helplines</a></li>
-                            
-                </ul>
+
+                        </ul>
             </div>
         </div>
         <div class="dropdown text-end px-5 mx-4">
@@ -77,21 +77,30 @@
     <div class="alert alert-primary justify-content-center text-center" role="alert">
         <b>ABOUT US</b>
     </div>
-   
 
 
-    <div class="container main-body shadow my-3 mb-5">
-        <div class="col-md-12 border-right">
+
+    <div class="container main-body shadow py-5 mb-5">
+        <div class="col-md-12 ">
             <h4><b>About us</b></h4>
             <hr>
-            <p> </p>
+            <p>A Traffic Management System (TMS) is a website application that assists in getting into ecosystem of
+                Traffic. TMS is designed to manage Payment System and E-Chit, Traffic rules and sign, Metro FM regarding
+                Traffic and accidents, Notice, Traffic helplines to make direct call to Traffic Station, Traffic
+                Awareness video. Which will make much more convenient for user and traffic.<br><br>
+
+                The primary goal of TMS is to provide Payment system easy from E-Chit which will be nature friendly and
+                no need to waste paper. Most of the user face problem with losing paper Chit from wallet or getting
+                washed. So, TMS has solution to help user and Traffic. Payment features helps user to pay with given QR
+                and easy pay from Banking such a E-sewa. Which erase delay system user used to face like filling deposit
+                slip of Global IME. Which will save much more time. </p>
         </div>
     </div>
 
 
     <div class="container main-body shadow my-3 py-4">
-        <div class="col-md-12  border-right">
-            <h4 ><b>CONTACT INFORMATION</b></h4>
+        <div class="col-md-12  ">
+            <h4><b>CONTACT INFORMATION</b></h4>
             <hr>
             <p>
                 Kathmandu Valley Traffic Police Office<br><br>
@@ -102,12 +111,13 @@
         </div>
     </div>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-center pt-2 fixed-bottom" style="background-color: aliceblue;">
+    <div class="d-flex flex-column flex-sm-row justify-content-center pt-2"
+        style="background-color: aliceblue;">
         <p class="mb-4">© 2023 TMS, All rights reserved.</p>
         <ul class="list-unstyled d-flex mb-4">
 
-            <li class="ms-3"><a href="https://www.facebook.com/profile.php?id=100091197832889"><i class="bi bi-facebook" width="100" height="100"></i><span
-                        class="visually-hidden">Facebook
+            <li class="ms-3"><a href="https://www.facebook.com/profile.php?id=100091197832889"><i class="bi bi-facebook"
+                        width="100" height="100"></i><span class="visually-hidden">Facebook
                         group</span></a></li>
             <li class="ms-3"><a href="#"><i class="bi bi-instagram"></i><span class="visually-hidden">Instagram
                         page</span></a></li>
