--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 
     <div class="container main-body shadow my-3 py-4">
         <div class="col-md-12  ">
-            <h4><b>CONTACT INFORMATION</b></h4>
+            <h4><b>Contact Information</b></h4>
             <hr>
             <p>
                 Kathmandu Valley Traffic Police Office<br><br>
