--- a/admin/index.html
+++ b/admin/index.html
@@ -21,13 +21,13 @@
             <a href="index.html">
                 <li><img src="img/dashboard (2).png" alt="">&nbsp; <span>Dashboard</span> </li>
             </a>
-            <a href="user.html">
+            <a href="user.php">
                 <li><img src="img/reading-book (1).png" alt="">&nbsp;<span>User</span> </li>
             </a>
             <a href="traffic2.php">
                 <li><img src="img/traffic.jpg"style="height:30px; width:30px" alt="">&nbsp;<span>Traffic</span> </li>
             </a>
-            <a href="echit.html">
+            <a href="echit.php">
                 <li><img src="img/e.png" style="height:30px; width:30px" alt="">&nbsp;<span>E-chit</span> </li>
             </a>
             <a href="#">
