--- a/traffic/trafficdash.html
+++ b/traffic/trafficdash.html
@@ -69,12 +69,16 @@
     <li>
       <form class="px-4 py-3">
         <div class="mb-3">
-          <label for="name" class="form-label">Name:</label>
+          <label for="name" class="form-label">Name</label>
           <input type="text" class="form-control" id="name" placeholder="Name">
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email:</label>
+          <label for="email" class="form-label">Email</label>
           <input type="email" class="form-control" id="email" placeholder="Email">
+        </div>
+        <div class="mb-3">
+          <label for="batchnumber" class="form-label">Batch Number</label>
+          <input type="email" class="form-control" id="batchnumber" placeholder="Batch">
         </div>
       </form>
     </li>
