--- a/user/payment.html
+++ b/user/payment.html
@@ -89,7 +89,7 @@
           <article class="card col-lg-3">
             <div class="gap-2 card-body vstack"><!--adding card componets-->
              
-                <img class="card-img-top" src="img/qr.png" alt="payment image"><!--adding image in card-->
+                <img class="card-img-top" src="img/scanner.jpg" alt="payment image"><!--adding image in card-->
                 <i class=""></i>
                 <h4 class="card-title fw-bold text-center">SCAN ME </h4>
               
