--- a/user/userdash.html
+++ b/user/userdash.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Traffic Demo</title>
+  <title>Traffic user</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -57,26 +57,17 @@
               <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
               <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
               <li><a class="dropdown-item" href="helpline.html">Traffic Helplines</a></li>
+              <li><a class="dropdown-item" href="complain.html">Complain</a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
-    <div class="dropdown text-end px-5 mx-4">
-      <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        <img src="img/sachin.jpg" alt="profile" width="38" height="38" class="rounded-circle">
+    <div class=" text-end px-5 mx-4">
+      <a href="login.html"  >
+          <button type="button" class="btn btn-danger btn-sm">Logout</button>
       </a>
-      <!--drop down sections of profile-->
-      <ul class="dropdown-menu text-small">
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><a class="dropdown-item" href="#">Settings</a></li>
-        <li>
-          <hr class="dropdown-divider">
-        </li>
-        <li><a class="dropdown-item" href="login1.html">Sign out</a></li>
-      </ul>
-    </div>
+  </div>
   </nav>
   <!--nav bar end-->
 
@@ -161,7 +152,7 @@
 
       <article class="card col-lg-3">
         <div class="gap-2 card-body vstack"><!--adding card componets-->
-          <a href=".html">
+          <a href="payment.html">
             <img class="card-img-top" src="img/payment.jpeg" alt="payment image"><!--adding image in card-->
             <i class=""></i>
             <h3 class="card-title fw-bold">Payment</h3>
@@ -172,7 +163,7 @@
 
       <article class="card col-lg-3">
         <div class="gap-2 card-body vstack"><!--adding card componets-->
-          <a href="trafficsign.html">
+          <a href="notice1.html">
             <img class="card-img-top" src="img/notice1.jpg" alt="payment image"><!--adding image in card-->
             <i class=""></i>
             <h3 class="card-title fw-bold">Notice</h3>
@@ -205,7 +196,7 @@
 
       <article class="card col-lg-3">
         <div class="gap-2 card-body vstack"><!--adding card componets-->
-          <a href="trafficsign.html">
+          <a href="helpline.html">
             <img class="card-img-top" src="img/help.jpg" alt="payment image"><!--adding image in card-->
             <i class=""></i>
             <h3 class="card-title fw-bold">Traffic Helplines</h3>
