--- a/user/notice3.html
+++ b/user/notice3.html
@@ -81,9 +81,10 @@
 
 
     <div class="container main-body shadow my-3 py-4">
-        <div class="col-md-12 col-sm-12 border-right">
+        <div class="col-md-12 col-sm-12">
             <h3><b>Precaution for Motorists</b></h3>
             <h6>03/23/2023</h6>
+            <img class=" justify-content-center" src="img/tips.jpg" style="height:200px">
             <hr>
             <p>Roads become slippery after first showers due to accumulated dust and lubricants. Hence drive carefully and avoid sudden braking.
                 Check wipers, car battery, tyros & your spare tyros. Replace worn out tyros.
@@ -107,7 +108,7 @@
 
    
 
-    <div class="d-flex flex-column flex-sm-row justify-content-center pt-2 fixed-bottom"
+    <div class="d-flex flex-column flex-sm-row justify-content-center pt-2"
                     style="background-color: aliceblue;">
                     <p class="mb-4">© 2023 TMS, All rights reserved.</p>
                     <ul class="list-unstyled d-flex mb-4">
