--- a/user/notice2.html
+++ b/user/notice2.html
@@ -83,9 +83,10 @@
 
 
     <div class="container main-body shadow my-3 py-4">
-        <div class="col-md-12 col-sm-12 border-right">
+        <div class="col-md-12 col-sm-12 ">
             <h3><b>Metro traffic to manage street lights in the capital</b></h3>
             <h6>03/23/2023</h6>
+            <img class=" justify-content-center" src="img/light.jpeg" style="height:200px">
             <hr>
             <p>Metropolitan Traffic Police Division is all set to manage street lights in Kathmandu valley. Organizing a
                 press conference in the capital on Monday, newly appointed chief of MTPD Senior Superintendent of Police
