--- a/user/trafficrule.html
+++ b/user/trafficrule.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>driving</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-<style>
-    body{
-        background-color: rgb(255, 255, 255);
-        padding-top: 82px;
-    }
-</style>
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: rgb(255, 255, 255);
+            padding-top: 82px;
+        }
+    </style>
 
 </head>
 
@@ -55,24 +55,17 @@
                             <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
                             <li><a class="dropdown-item" href="helpline.html">Traffic Helplines</a></li>
+                            <hr class="dropdown-divider">
+                            <li><a class="dropdown-item" href="complain.html">Complain</a></li>
 
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="dropdown text-end px-5 mx-4">
-            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <img src="img/sachin.jpg" alt="profile" width="38" height="38" class="rounded-circle">
+        <div class=" text-end px-5 mx-4">
+            <a href="login.html">
+                <button type="button" class="btn btn-danger btn-sm">Logout</button>
             </a>
-            <ul class="dropdown-menu text-small">
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="login1.html">Sign out</a></li>
-            </ul>
         </div>
 
     </nav>
@@ -91,8 +84,8 @@
         <p class="mb-4">© 2023 TMS, All rights reserved.</p>
         <ul class="list-unstyled d-flex mb-4">
 
-            <li class="ms-3"><a href="https://www.facebook.com/profile.php?id=100091197832889"><i class="bi bi-facebook" width="100" height="100"></i><span
-                        class="visually-hidden">Facebook
+            <li class="ms-3"><a href="https://www.facebook.com/profile.php?id=100091197832889"><i class="bi bi-facebook"
+                        width="100" height="100"></i><span class="visually-hidden">Facebook
                         group</span></a></li>
             <li class="ms-3"><a href="#"><i class="bi bi-instagram"></i><span class="visually-hidden">Instagram
                         page</span></a></li>
