Add complain page

--- a/user/notice.html
+++ b/user/notice.html
@@ -52,25 +52,18 @@
                             <li><a class="dropdown-item" href="trafficrule.html">Traffic Rules</a></li>
                             <li><a class="dropdown-item" href="trafficsign.html">Traffic Signs</a></li>
                             <li><a class="dropdown-item" href="#">Traffic Helplines</a></li>
+                            <hr class="dropdown-divider">
+                            <li><a class="dropdown-item" href="complain.html">Complain</a></li>
                         
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="dropdown text-end px-5 mx-4">
-            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <img src="img/sachin.jpg" alt="profile" width="38" height="38" class="rounded-circle">
+        <div class=" text-end px-5 mx-4">
+            <a href="login.html"  >
+                <button type="button" class="btn btn-danger btn-sm">Logout</button>
             </a>
-            <ul class="dropdown-menu text-small">
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="login1.html">Sign out</a></li>
-            </ul>
         </div>
 
     </nav>
