--- a/resetpassword.html
+++ b/resetpassword.html
@@ -50,7 +50,9 @@
 			</div>
 			<div class="form-group mb-4">
 				<label for="password">New Password</label>
-				<input type="password" class="form-control" name="new_password" id="new_password" placeholder="Enter Your New Password" required>
+				<input type="password" class="form-control" name="new_password" id="new_password" placeholder="Enter Your New Password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}$">
+				<small>
+					*Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number, and one special character (!@#$%^&*)</small>
 			</div>
 			
 			<div class="form-group ">
