--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,9 @@
                   </div>
                   <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter password" name="password" required>
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" name="password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}$">
+                    <small>
+                      *Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number, and one special character (!@#$%^&*)</small>
                   </div>
                   <div class="form-group">
                     <label for="license">License Number</label>
