--- a/traffic/efine.html
+++ b/traffic/efine.html
@@ -297,7 +297,7 @@
         selectElement.options[i] = null;
       }
     }
-  </script>
+  </script> g
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
