--- a/user/complain.html
+++ b/user/complain.html
@@ -88,20 +88,20 @@
                 <p class="h4 mb-4">Complain</p>
 
                 <!-- Name -->
-                <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name">
+                <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name" required="required">
 
                 <!-- Email -->
-                <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
+                <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail" required="required">
 
                 <!-- Mobile -->
-                <input type="Subject" id="defaultContactFormSubject" class="form-control mb-4" placeholder="Subject">
+                <input type="Subject" id="defaultContactFormSubject" class="form-control mb-4" placeholder="Subject" required="required">
 
 
 
                 <!-- Message -->
                 <div class="form-group">
                     <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3"
-                        placeholder="Message"></textarea>
+                        placeholder="Message" required="required"></textarea>
                 </div>
 
                 <!-- Send button -->
