add finemount on efine

--- a/traffic/efine.html
+++ b/traffic/efine.html
@@ -168,7 +168,7 @@
                         fineAmount = 1000;
                         break;
                       case "Driving without licence or letting someone without licence drive":
-                        fineAmount = true;
+                        fineAmount = 1000;
                         break;
                       case "Involvement in accidents or fleeing after accident":
                         fineAmount = 1500;
