--- a/traffic/efine.html
+++ b/traffic/efine.html
@@ -187,7 +187,7 @@
                     }
 
                     fineBoxInput.value = fineAmount;
-                    noticeInput.value = requiresNotice ? "Attend the class and proceed to payment " : "Proceed to payment ";
+                    //noticeInput.value = requiresNotice ? "Attend the class and proceed to payment " : "Proceed to payment ";
                   });
                 </script>
 
